Set up for Compass/Sass.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/jjkiesch/prepress-theme",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-compass": "^1.0.1",
     "grunt-contrib-symlink": "^0.3.0",
     "load-grunt-tasks": "^1.0.0"
   }
