--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-compass": "^1.0.1",
     "grunt-contrib-symlink": "^0.3.0",
+    "grunt-contrib-watch": "^0.6.1",
     "load-grunt-tasks": "^1.0.0"
   }
 }
