Use wiredep to manage WordPress dependencies.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-compass": "^1.0.1",
     "grunt-contrib-symlink": "^0.3.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-wiredep": "^1.9.0",
     "load-grunt-tasks": "^1.0.0"
   }
 }
