--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,6 @@
   ],
   "private": true,
   "dependencies": {
-    "bootstrap-sass-official": "~3.2.0+2"
+    "bootstrap-sass-official": "~3.2.0"
   }
 }
